--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,17 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<servlet>
+		<servlet-name>Main</servlet-name>
+		<servlet-class>com.newlight.app.main.MainFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Main</servlet-name>
+		<url-pattern>*.mi</url-pattern>
+	</servlet-mapping>
+	
 
 	<servlet>
 		<servlet-name>Member</servlet-name>
