--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	id="WebApp_ID" version="4.0">
-	<display-name>newlight</display-name>
+	<display-name>newlight2</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -83,5 +83,14 @@
 		<url-pattern>*.nc</url-pattern>
 	</servlet-mapping>
 
-
+	<servlet>
+		<servlet-name>Qna</servlet-name>
+		<servlet-class>com.newlight.app.qna.QnAFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>Qna</servlet-name>
+	<url-pattern>*.qn</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
