--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -105,4 +105,24 @@
 	<url-pattern>*.qn</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>CommunityFile</servlet-name>
+		<servlet-class>com.newlight.app.communityFile.CommunityFileFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>CommunityFile</servlet-name>
+	<url-pattern>*.comf</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>CommunityComment</servlet-name>
+		<servlet-class>com.newlight.app.communityComment.CommunityCommentFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>CommunityComment</servlet-name>
+	<url-pattern>*.cc</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
