관리자 페이지까지 완료

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -133,7 +133,16 @@
 	<servlet-mapping>
 	<servlet-name>CreationComment</servlet-name>
 	<url-pattern>*.cc1</url-pattern>
-
+	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>Admin</servlet-name>
+		<servlet-class>com.newlight.app.admin.AdminFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>Admin</servlet-name>
+	<url-pattern>*.ad</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
