--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,8 +10,7 @@
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-		<welcome-file>community.jsp</welcome-file>
+		<welcome-file>default.jsp</welcome-file> 
 	</welcome-file-list>
 	
 	<servlet>
@@ -133,7 +132,16 @@
 	<servlet-mapping>
 	<servlet-name>CreationComment</servlet-name>
 	<url-pattern>*.cc1</url-pattern>
-
+	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>CreationsFile</servlet-name>
+		<servlet-class>com.newlight.app.creationsFile.CreationFileFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	<servlet-name>CreationsFile</servlet-name>
+	<url-pattern>*.ccmf</url-pattern>
 	</servlet-mapping>
 	
 </web-app>
